Project image sizing issue fixed and project text alignment issue fixed

--- a/src/components/ProjectDetail/ProjectDetail.styles.css
+++ b/src/components/ProjectDetail/ProjectDetail.styles.css
@@ -36,7 +36,7 @@
     text-decoration: none;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
 }
 
 .project-header-content br {
