--- a/src/components/recent-project/RecentProject.styles.css
+++ b/src/components/recent-project/RecentProject.styles.css
@@ -40,6 +40,7 @@
 
 .project-img {
     max-width: 100%;
+    border-radius: 30px;
 }
 
 .project-card {
